Run formatter